QC 041226: Fix community image cropping, update founder title
- Change community card images from fixed height/cover to auto/contain
  so product and people subjects are fully visible on mobile
- Update founder title to "Meet the Founder, Rohan"

--- a/css/pages.css
+++ b/css/pages.css
@@ -802,8 +802,8 @@
 
 .community-card img {
   width: 100%;
-  height: 280px;
-  object-fit: cover;
+  height: auto;
+  object-fit: contain;
   display: block;
 }
 
@@ -820,17 +820,11 @@
   .community-grid {
     grid-template-columns: 1fr;
   }
-  .community-card img {
-    height: 240px;
-  }
 }
 
 @media (min-width: 960px) {
   .community-grid {
     grid-template-columns: repeat(4, 1fr);
-  }
-  .community-card img {
-    height: 300px;
   }
 }
 
